--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,900&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="style.css">
     <title>QUICK POKEDEX</title>
 </head>
@@ -11,8 +12,8 @@
     <main>
         <div class="container">
             <div class="title">
-                <p style="font-size: 20px; color: white">QUICK</p>
-                <p style="font-size: 42px; font-weight: bolder; color: white">POKEDEX</p>
+                <p style="font-size: 30px; color: white">QUICK</p>
+                <p style="font-size: 50px; font-weight: 900; color: white;">POKEDEX</p>
             </div>
             <div class="pokedex">
                 <div class="section-1">
@@ -29,9 +30,10 @@
                     <div class="info">
                         <p><b>Pokedex:</b> 249</p>
                         <p><b>Type:</b> Flying</p>
-                        <p><b>Habitat:</b> Ocean</p>
                         <p><b>Color:</b> White</p>
-                        <p><b>Something:</b> Nothing</p>
+                        <p><b>Height:</b> 52ft</p>
+                        <p><b>Weight:</b> 2100lbs</p>
+                        <a href="#"><button>MORE</button></a>
                     </div>
                 </div>
                 <div class="section-2">
@@ -47,5 +49,7 @@
             </div>
         </div>
     </main>
+
+    <script src="app.js"></script>
 </body>
 </html>
