added app functionality

--- a/index.html
+++ b/index.html
@@ -20,29 +20,28 @@
                     <div class="search">
                         <div class="search-bar">
                             <form action="">
-                                <input type="text" placeholder="search">
-                                <button style="width: 30px; height: 30px;">
+                                <input id="search-input" type="text" placeholder="pikachu">
+                                <button id="search-button" style="width: 30px; height: 30px;">
                                     <img src="./img/search.svg" alt="" class="button-img" style="width: 100%;">
                                 </button>
                             </form>
                         </div>
                     </div>
                     <div class="info">
-                        <p><b>Pokedex:</b> 249</p>
+                        <!-- <p><b>Pokedex:</b> 249</p>
                         <p><b>Type:</b> Flying</p>
-                        <p><b>Color:</b> White</p>
                         <p><b>Height:</b> 52ft</p>
                         <p><b>Weight:</b> 2100lbs</p>
-                        <a href="#"><button>MORE</button></a>
+                        <a href="https://www.pokemon.com/us/pokedex/lugia" target="_blank"><button>MORE</button></a> -->
                     </div>
                 </div>
                 <div class="section-2">
                     <div class="card">
                         <div class="image">
-                            <img src="./img/249.png" alt="image of lugia" width="300px">
+                            <!-- <img src="./img/249.png" alt="image of lugia" width="300px"> -->
                         </div>
                         <div class="name" style="margin-top: 40px;">
-                            <p style="font-size: 42px; font-weight:bolder;">LUGIA</p>
+                            <!-- <p style="font-size: 42px; font-weight:bolder;">LUGIA</p> -->
                         </div>
                     </div>
                 </div>
