--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
                 <div class="section-1">
                     <div class="search">
                         <div class="search-bar">
-                            <fieldset>
+                            <form action="">
                                 <input id="search-input" type="text" placeholder="pikachu">
                                 <button id="search-button" style="width: 30px; height: 30px;">
                                     <img src="./img/search.svg" alt="" class="button-img" style="width: 100%;">
                                 </button>
-                            </fieldset>
+                            </form>
                         </div>
                     </div>
                     <div class="info">
