fixed search bug

--- a/index.html
+++ b/index.html
@@ -28,27 +28,18 @@
                         </div>
                     </div>
                     <div class="info">
-                        <!-- <p><b>Pokedex:</b> 249</p>
-                        <p><b>Type:</b> Flying</p>
-                        <p><b>Height:</b> 52ft</p>
-                        <p><b>Weight:</b> 2100lbs</p>
-                        <a href="https://www.pokemon.com/us/pokedex/lugia" target="_blank"><button>MORE</button></a> -->
                     </div>
                 </div>
                 <div class="section-2">
                     <div class="card">
-                        <div class="image">
-                            <!-- <img src="./img/249.png" alt="image of lugia" width="300px"> -->
-                        </div>
-                        <div class="name" style="margin-top: 40px;">
-                            <!-- <p style="font-size: 42px; font-weight:bolder;">LUGIA</p> -->
-                        </div>
+                        <div class="image"></div>
+                        <div class="name" style="margin-top: 40px;"></div>
                     </div>
                 </div>
             </div>
         </div>
     </main>
-
+    
     <script src="app.js"></script>
 </body>
 </html>
