--- a/index.html
+++ b/index.html
@@ -4,21 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,900&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
     <link rel="stylesheet" href="style.css">
     <title>QUICK POKEDEX</title>
 </head>
 <body>
     <main>
         <div class="container">
-            <div class="title">
+            <div class="title" data-aos='fade-right'>
                 <p style="font-size: 30px; color: white">QUICK</p>
                 <p style="font-size: 50px; font-weight: 900; color: white;">POKEDEX</p>
             </div>
             <div class="pokedex">
                 <div class="section-1">
                     <div class="search">
-                        <div class="search-bar">
+                        <div class="search-bar"  data-aos='fade-up'>
                             <form action="">
                                 <input id="search-input" type="text" placeholder="pikachu">
                                 <button id="search-button" style="width: 30px; height: 30px;">
@@ -39,7 +40,16 @@
             </div>
         </div>
     </main>
-    
+
+
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init({
+            offset: 150,
+            duration: 900
+        });
+    </script>
     <script src="app.js"></script>
 </body>
 </html>
