--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                         </div>
                     </div>
                     <div class="info">
+                        <p style="padding: 30px;" data-aos='fade-left'>Search pokemons like charmander, ditto and many more for quick stats and image</p>
                     </div>
                 </div>
                 <div class="section-2">
